<resources>
    <!--    api-->
    <string name="mainUrl">https://dummyjson.com/</string>
    <string name="productsEndpoint">products</string>
    <string name="loginEndpoint">auth/login</string>


    <!--    getStarted-->
    <string name="app_name">ShopIt</string>
    <string name="getStartedTagline">Everything you need, delivered smarter Shop from trusted stores around you</string>
    <!--    login-->
    <string name="login">Login</string>
    <string name="loginWelcomeTxt">Welcome Back! Glad to See You Again!</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailHint">Enter your email</string>
    <string name="passwordHint">Enter your password</string>
    <string name="registerNow">Register Now</string>
    <string name="dontHaveAccount">"Don't have an account?"</string>

    <!--    signup-->
    <string name="signup">Signup</string>
    <string name="signupWelcomeTxt">Hello! Register to Get Started</string>
    <string name="name">Name</string>
    <string name="confPassword">Confirm Password</string>
    <string name="nameHint">Enter your Name</string>
    <string name="confPasswordHint">Enter Confirm password</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="loginNow">Login Now</string>

    <!--    bottom navbar-->
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>

    <!--    homescreen-->
    <string name="discover_homeappbar">Discover</string>
    <string name="search">Search products</string>

    <!--    account profile-->
    <string name="account">Account</string>
    <string name="logout">Logout</string>

    <!--    shopscreen-->
    <string name="shop_appbar">Shop Now</string>
    <string name="browse_appbar">Browse Products of Your Choice</string>

    <!--    wishlistscreen-->
    <string name="wishlist_appbar">Your Favorites</string>
    <string name="wishlist_subtitle_appbar">Your Choices are Great</string>
    <string name="empty_products">No Products Found</string>
    <string name="welcome">"Welcome Back,"</string>
    <string name="customer">Customer</string>

<!--    seller-->
    <string name="seller">Seller</string>
    <string name="seller_dashboard">Seller Dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="products">Products</string>
    <string name="add_product">Add Product</string>
</resources>