<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:iconTint="@color/primary"
        android:title="@string/home" />
    <item
        android:id="@+id/shop"
        android:icon="@drawable/shop"
        android:iconTint="@color/primary"
        android:title="@string/shop" />
    <item
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <item
        android:id="@+id/wishlist"
        android:icon="@drawable/fav"

        android:iconTint="@color/primary"
        android:title="@string/wishlist" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
</menu>