<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".seller.auth.ui.login.SellerLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/loginWelcomeTxt"
            android:textColor="@color/secondary"
            android:textFontWeight="500"
            android:textSize="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textColor="@color/secondary"
                android:textSize="@dimen/txtLabel" />

            <EditText
                android:id="@+id/sellerEmailField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/sellertxtfieldbg"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:text="@string/password"
                    android:textColor="@color/secondary"
                    android:textSize="@dimen/txtLabel" />

                <EditText
                    android:id="@+id/sellerPasswordField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/sellertxtfieldbg"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:paddingHorizontal="20dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sellerLoginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btnHeight"
                    android:backgroundTint="@color/secondary"
                    android:text="@string/login"
                    android:textSize="@dimen/btnText"
                    app:cornerRadius="@dimen/btnRadius" />

                <ProgressBar
                    android:id="@+id/sellerLoginLoader"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:indeterminateTint="@android:color/white"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/dontHaveAccount"
                    android:textSize="@dimen/txtBtn" />

                <Button
                    android:id="@+id/sellerRegisterNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@color/transparent"
                    android:padding="0dp"
                    android:paddingVertical="0dp"
                    android:text="@string/registerNow"
                    android:textColor="@color/secondary"
                    android:textFontWeight="500"
                    android:textSize="@dimen/txtBtn" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>