<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.auth.ui.signup.SellerSignup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signupWelcomeTxt"
                android:textColor="@color/secondary"
                android:textFontWeight="500"
                android:textSize="28dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/name"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/txtLabel" />

                    <EditText
                        android:id="@+id/sellerNameField"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/sellertxtfieldbg"
                        android:hint="@string/nameHint"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/email"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/txtLabel" />

                    <EditText
                        android:id="@+id/sellerEmailFieldSignup"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="2dp"

                        android:background="@drawable/sellertxtfieldbg"
                        android:hint="@string/emailHint"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="2dp"
                        android:text="@string/password"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/txtLabel" />

                    <EditText
                        android:id="@+id/sellerPasswordFieldSignup"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/sellertxtfieldbg"
                        android:hint="@string/passwordHint"
                        android:inputType="textPassword"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="2dp"
                        android:text="@string/confPassword"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/txtLabel" />

                    <EditText
                        android:id="@+id/sellerConfPasswordField"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/sellertxtfieldbg"
                        android:hint="@string/confPasswordHint"
                        android:inputType="textPassword"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sellerSignupBtn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btnHeight"
                        android:backgroundTint="@color/secondary"
                        android:text="@string/signup"
                        android:textSize="@dimen/btnText"
                        app:cornerRadius="@dimen/btnRadius" />

                    <ProgressBar
                        android:id="@+id/sellerSignupLoader"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:indeterminateTint="@android:color/white"
                        android:layout_centerInParent="true"
                        android:visibility="gone"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/alreadyHaveAccount"
                        android:textSize="@dimen/txtBtn" />

                    <Button
                        android:id="@+id/sellerLoginNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:background="@color/transparent"
                        android:padding="0dp"
                        android:paddingVertical="0dp"
                        android:text="@string/loginNow"
                        android:textColor="@color/secondary"
                        android:textFontWeight="500"
                        android:textSize="@dimen/txtBtn" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>