<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="13dp"
    android:paddingTop="10dp"
    tools:context=".main.screens.wishlist.ui.WishlistFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wishlist_appbar"
                android:textColor="@color/primary"
                android:textFontWeight="500"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wishlist_subtitle_appbar"
                android:textColor="@color/gray"
                android:textFontWeight="500"
                android:textSize="14sp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favProdRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                tools:listitem="@layout/customer_item_fav_product" />

           <TextView
               android:id="@+id/emptyStateWishlist"
               android:gravity="center"
               android:layout_width="match_parent"
               android:text="@string/empty_products"
               android:layout_height="match_parent"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>

</LinearLayout>